# hidroweb

./: README.md  main.py  pyproject.toml  requirements.txt
EstacoesHidroweb/: generate_token.py
hidroweb/: __init__.py  auth.py  station_data.py  stations.py
phydro/: __init__.py  auth.py  station_data.py  stations.py
